--- a/ASCEND 3/ASCEND 3/ascend-ui/My-Mentor.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/My-Mentor.html
@@ -175,6 +175,13 @@
                 <i data-lucide="info" style="width: 18px; height: 18px; stroke-width: 2;"></i>
                 <span>About Us</span>
             </a>
+            <div class="sidebar-nav-item"
+                style="cursor: default; border: 1px solid rgba(255, 215, 0, 0.2); background: rgba(255, 215, 0, 0.05) !important;">
+                <i data-lucide="star"
+                    style="width: 18px; height: 18px; stroke-width: 2; color: #FFD700; fill: rgba(255, 215, 0, 0.5);"></i>
+                <span style="color: #FFD700; font-weight: 600;" id="headerPoints">...</span>
+                <span style="font-size: 0.75em; margin-left: 4px; color: var(--text-tertiary);">PTS</span>
+            </div>
         </div>
 
         <div class="header-user" onclick="window.location.href='profile.html'" style="cursor: pointer;">
