--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-dashboard.html
@@ -528,12 +528,12 @@
                     } else {
                         recentActivity.forEach(q => {
                             const html = `
-                                <div class="activity-item">
-                                    <div class="activity-dot"></div>
-                                    <div>
-                                        <div style="font-size: 0.9rem; font-weight: 500; color: var(--text-primary);">${q.author || 'Unknown'}</div>
-                                        <div style="font-size: 0.8rem; color: var(--text-secondary); display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden;">${q.title || 'Untitled'}</div>
-                                        <div style="font-size: 0.7rem; color: var(--text-tertiary); margin-top: 0.25rem;">${q.time}</div>
+                                <div class="activity-item" style="align-items: center;">
+                                    <div class="avatar avatar-sm" style="background-color: var(--card-bg); border: 1px solid var(--border-color); width: 40px; height: 40px; font-size: 0.8rem; flex-shrink: 0;">${q.author_initials || '??'}</div>
+                                    <div style="flex: 1; min-width: 0;">
+                                        <div style="font-size: 0.9rem; font-weight: 500; color: var(--text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${q.author || 'Unknown'}</div>
+                                        <div style="font-size: 0.8rem; color: var(--text-secondary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${q.title || 'Untitled'}</div>
+                                        <div style="font-size: 0.7rem; color: var(--text-tertiary); margin-top: 0.1rem;">${q.time}</div>
                                     </div>
                                 </div>
                             `;
