--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-mentees.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-mentees.html
@@ -276,7 +276,7 @@
                                     <strong style="display: block; font-size: 0.8rem; color: var(--text-tertiary); margin-bottom: 0.25rem;">Current Goal:</strong>
                                     ${m.goal}
                                 </div>
-                                <button class="btn btn-secondary btn-sm" style="width: 100%; margin-top: auto;" onclick="openMessageModal(${m.id}, '${m.name.replace(/'/g, "\\'")}')">Message Mentee</button>
+                                <button class="btn btn-secondary btn-sm" style="width: 100%; margin-top: auto;" href="mentor-messages.html">Message Mentee</button>
                             </div>
                         `;
                         container.insertAdjacentHTML('beforeend', html);
