--- a/ASCEND 3/ASCEND 3/ascend-ui/dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/dashboard.html
@@ -142,13 +142,19 @@
             </div>
         </div>
 
-        <div class="header-user" onclick="window.location.href='profile.html'" style="cursor: pointer;">
-            <div class="header-user-info">
-                <div class="header-user-name">Loading...</div>
-                <div class="header-user-role">Student</div>
+        <div style="display: flex; align-items: center; gap: 1.5rem;">
+            <button onclick="window.location.href='student-messages.html'"
+                style="background: none; border: none; color: #4da3ff; cursor: pointer; padding: 0.5rem; display: flex; align-items: center; transition: color 0.2s;">
+                <i data-lucide="message-square" style="width: 20px; height: 20px;"></i>
+            </button>
+
+            <div class="header-user" onclick="window.location.href='profile.html'" style="cursor: pointer;">
+                <div class="header-user-info">
+                    <div class="header-user-name">Loading...</div>
+                    <div class="header-user-role">Student</div>
+                </div>
+                <div class="avatar avatar-md"></div>
             </div>
-            <div class="avatar avatar-md"></div>
-        </div>
     </header>
 
     <!-- Main Content -->
@@ -359,7 +365,7 @@
                                     </div>
                                     <div style="display: flex; gap: 5px;">
                                         <button class="btn btn-sm btn-outline" onclick="requestMentorship(${m.id}, '${m.name.replace(/'/g, "\\'")}')">Request</button>
-                                        <button class="btn btn-sm btn-secondary" onclick="window.openMessageModal(${m.id}, '${m.name.replace(/'/g, "\\'")}')">Message</button>
+                                        <button class="btn btn-sm btn-secondary" onclick="window.location.href='student-messages.html?partner_id=' + m.id">Message</button>
                                     </div>
                                 </div>
                             `;
