--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-messages.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-messages.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentor Messages - ASCEND</title>
+    <title>Messages - ASCEND</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,31 +21,474 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="js/include-components.js"></script>
     <style>
-        .page-header {
-            margin-bottom: 2rem;
-        }
-
-        .filter-bar {
+        .chat-container {
             display: flex;
-            gap: 1rem;
-            margin-bottom: 2rem;
-            flex-wrap: wrap;
+            height: calc(100vh - 140px);
+            /* Adjust based on header/footer */
+            background: var(--card-bg);
+            border: 1px solid var(--border-color);
+            border-radius: var(--radius-lg);
+            overflow: hidden;
         }
 
-        .search-input {
-            flex: 1;
-            padding: 0.75rem 1rem;
-            border-radius: var(--radius-md);
+        /* Sidebar - Chat List */
+        .chat-sidebar {
+            width: 320px;
+            border-right: 1px solid var(--border-color);
+            display: flex;
+            flex-direction: column;
+            background: rgba(0, 0, 0, 0.2);
+        }
+
+        .chat-header {
+            padding: 1rem;
+            border-bottom: 1px solid var(--border-color);
+        }
+
+        .chat-search {
+            width: 100%;
+            padding: 0.5rem;
+            background: rgba(255, 255, 255, 0.05);
             border: 1px solid var(--border-color);
-            background: var(--card-bg);
+            border-radius: var(--radius-md);
             color: var(--text-primary);
         }
 
-        .search-input:focus {
-            outline: none;
-            border-color: var(--primary-color);
+        .chat-list {
+            flex: 1;
+            overflow-y: auto;
+        }
+
+        .chat-item {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            padding: 1rem;
+            cursor: pointer;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+            transition: background 0.2s;
+        }
+
+        .chat-item:hover {
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .chat-item.active {
+            background: rgba(77, 163, 255, 0.1);
+            border-left: 3px solid var(--primary);
+        }
+
+        /* Main Chat Area */
+        .chat-main {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            background: var(--bg-main);
+        }
+
+        .chat-main-header {
+            padding: 1rem;
+            border-bottom: 1px solid var(--border-color);
+            background: var(--card-bg);
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .messages-area {
+            flex: 1;
+            padding: 1.5rem;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .message-bubble {
+            max-width: 70%;
+            padding: 0.8rem 1rem;
+            border-radius: 12px;
+            position: relative;
+            line-height: 1.5;
+            font-size: 0.95rem;
+        }
+
+        .message-bubble.received {
+            background: var(--card-bg);
+            /* Darker grey */
+            color: var(--text-primary);
+            border: 1px solid var(--border-color);
+            align-self: flex-start;
+            border-bottom-left-radius: 2px;
+        }
+
+        .message-bubble.sent {
+            background: var(--primary);
+            /* Blue */
+            color: white;
+            align-self: flex-end;
+            border-bottom-right-radius: 2px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .message-time {
+            font-size: 0.7rem;
+            margin-top: 4px;
+            opacity: 0.7;
+            text-align: right;
+            display: block;
+        }
+
+        .chat-input-area {
+            padding: 1rem;
+            border-top: 1px solid var(--border-color);
+            background: var(--card-bg);
+            display: flex;
+            gap: 1rem;
+            align-items: flex-end;
+        }
+
+        .chat-input {
+            flex: 1;
+            background: rgba(0, 0, 0, 0.2);
+            border: 1px solid var(--border-color);
+            border-radius: 20px;
+            padding: 0.8rem 1rem;
+            color: var(--text-primary);
+            resize: none;
+            height: 44px;
+            /* Start height */
+            min-height: 44px;
+            max-height: 120px;
+        }
+
+        .empty-state {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            color: var(--text-secondary);
+            text-align: center;
         }
     </style>
+</head>
+
+<body>
+    <!-- Sidebar -->
+    <div id="sidebar-placeholder" data-src="mentor-sidebar.html"></div>
+
+    <!-- Header -->
+    <header class="header">
+        <div class="dashboard-nav-group">
+            <a href="mentor-dashboard.html" class="sidebar-nav-item">
+                <i data-lucide="layout-dashboard" style="width: 18px; height: 18px; stroke-width: 2;"></i>
+                <span>Dashboard</span>
+            </a>
+            <a href="contact.html" class="sidebar-nav-item ">
+                <i data-lucide="mail" style="width: 18px; height: 18px; stroke-width: 2;"></i>
+                <span>Contact Us</span>
+            </a>
+            <a href="about.html" class="sidebar-nav-item ">
+                <i data-lucide="info" style="width: 18px; height: 18px; stroke-width: 2;"></i>
+                <span>About Us</span>
+            </a>
+        </div>
+
+        <div style="display: flex; align-items: center; gap: 1.5rem;">
+            <button onclick="window.location.href='mentor-messages.html'"
+                style="background: none; border: none; color: #4da3ff; cursor: pointer; padding: 0.5rem; display: flex; align-items: center; transition: color 0.2s;">
+                <i data-lucide="message-square" style="width: 20px; height: 20px;"></i>
+            </button>
+            <div class="header-user" onclick="window.location.href='mentor-profile.html'" style="cursor: pointer;">
+                <div class="header-user-info">
+                    <div class="header-user-name">Mentor Name</div>
+                    <div class="header-user-role">Mentor</div>
+                </div>
+                <div class="avatar avatar-md">ME</div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="main-layout" style="padding-top: 80px; height: 100vh; overflow: hidden;">
+        <div class="page-container" style="height: 100%; padding-bottom: 0;">
+
+            <div class="chat-container">
+                <!-- Chat List Sidebar -->
+                <div class="chat-sidebar">
+                    <div class="chat-header">
+                        <input type="text" class="chat-search" placeholder="Search mentees...">
+                    </div>
+                    <div class="chat-list" id="menteeList">
+                        <!-- Mentees will replace this -->
+                        <div style="padding: 1rem; text-align: center; color: var(--text-secondary);">Loading...</div>
+                    </div>
+                </div>
+
+                <!-- Chat Main Area -->
+                <div class="chat-main">
+
+                    <!-- Header (Active User) -->
+                    <div class="chat-main-header" id="activeChatHeader" style="display: none;">
+                        <div class="avatar avatar-md" id="activeAvatar">?</div>
+                        <div>
+                            <div style="font-weight: 600;" id="activeName">Select a user</div>
+                            <div style="font-size: 0.8rem; color: var(--text-secondary);" id="activeRole">Student</div>
+                        </div>
+                    </div>
+
+                    <!-- Messages -->
+                    <div class="messages-area" id="messagesArea">
+                        <div class="empty-state">
+                            <i data-lucide="message-square"
+                                style="width: 48px; height: 48px; margin-bottom: 1rem; opacity: 0.5;"></i>
+                            <h3>Select a Mentee to Chat</h3>
+                            <p>Choose from your connected mentees on the left.</p>
+                        </div>
+                    </div>
+
+                    <!-- Input -->
+                    <div class="chat-input-area" id="chatInputArea" style="display: none;">
+                        <textarea class="chat-input" id="messageInput" placeholder="Type a message..."></textarea>
+                        <button class="btn btn-primary" id="sendBtn"
+                            style="border-radius: 50%; width: 44px; height: 44px; padding: 0;">
+                            <i data-lucide="send" style="width: 18px; height: 18px;"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <script src="js/navigation.js"></script>
+    <script>
+        lucide.createIcons();
+        let currentPartnerId = null;
+        let currentUserInitials = "ME";
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            const token = localStorage.getItem('auth_token');
+            if (!token) {
+                window.location.href = 'login.html';
+                return;
+            }
+
+            // Load User Profile (for Header & Initials)
+            try {
+                const profileRes = await fetch('http://127.0.0.1:5000/api/user/profile', {
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+                if (profileRes.ok) {
+                    const d = await profileRes.json();
+                    const name = d.full_name || 'Mentor';
+                    document.querySelector('.header-user-name').textContent = name;
+                    currentUserInitials = name.substring(0, 2).toUpperCase();
+                    document.querySelector('.header-user .avatar').textContent = currentUserInitials;
+                }
+            } catch (e) { }
+
+            // Load Mentees List
+            await loadMentees();
+
+            // Check URL Params for partner_id
+            const urlParams = new URLSearchParams(window.location.search);
+            const partnerId = urlParams.get('partner_id');
+            if (partnerId) {
+                selectChat(parseInt(partnerId));
+            }
+
+            // Setup Send Button
+            document.getElementById('sendBtn').addEventListener('click', sendMessage);
+            document.getElementById('messageInput').addEventListener('keypress', (e) => {
+                if (e.key === 'Enter' && !e.shiftKey) {
+                    e.preventDefault();
+                    sendMessage();
+                }
+            });
+        });
+
+        async function loadMentees() {
+            const token = localStorage.getItem('auth_token');
+            try {
+                const res = await fetch('http://127.0.0.1:5000/api/mentor/mentees', {
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                const listEl = document.getElementById('menteeList');
+                if (res.ok) {
+                    const mentees = await res.json();
+                    listEl.innerHTML = '';
+
+                    if (mentees.length === 0) {
+                        listEl.innerHTML = '<div style="padding: 1rem; text-align: center; color: var(--text-secondary);">No mentees connected yet.</div>';
+                        return;
+                    }
+
+                    mentees.forEach(m => {
+                        const item = document.createElement('div');
+                        item.className = 'chat-item';
+                        item.dataset.id = m.id;
+                        item.dataset.name = m.name;
+                        item.dataset.initials = m.initials;
+                        item.onclick = () => selectChat(m.id);
+
+                        item.innerHTML = `
+                            <div class="avatar avatar-sm" style="background: var(--primary); color: #000;">${m.initials}</div>
+                            <div style="flex: 1; min-width: 0;">
+                                <div style="font-weight: 500; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${m.name}</div>
+                                <div style="font-size: 0.8rem; color: var(--text-secondary);">Click to chat</div>
+                            </div>
+                        `;
+                        listEl.appendChild(item);
+                    });
+                }
+            } catch (e) {
+                console.error("Failed to load mentees", e);
+            }
+        }
+
+        async function selectChat(userId) {
+            currentPartnerId = userId;
+            const token = localStorage.getItem('auth_token');
+
+            // Update UI Active State
+            document.querySelectorAll('.chat-item').forEach(el => {
+                el.classList.remove('active');
+                if (parseInt(el.dataset.id) === userId) {
+                    el.classList.add('active');
+
+                    // Update Header
+                    document.getElementById('activeName').textContent = el.dataset.name;
+                    document.getElementById('activeAvatar').textContent = el.dataset.initials;
+                    document.getElementById('activeAvatar').style.background = 'var(--primary)';
+                    document.getElementById('activeAvatar').style.color = '#000';
+
+                    document.getElementById('activeChatHeader').style.display = 'flex';
+                    document.getElementById('chatInputArea').style.display = 'flex';
+                }
+            });
+
+            // If user not in sidebar list (e.g. from URL but list not loaded fully or pagination), handle gracefully?
+            // For now assuming list loaded.
+
+            // Fetch Messages
+            const messagesArea = document.getElementById('messagesArea');
+            messagesArea.innerHTML = '<div style="text-align:center; padding: 2rem; color: var(--text-secondary);">Loading history...</div>';
+
+            try {
+                const res = await fetch(`http://127.0.0.1:5000/api/messages/${userId}`, {
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (res.ok) {
+                    const messages = await res.json();
+                    messagesArea.innerHTML = '';
+
+                    if (messages.length === 0) {
+                        messagesArea.innerHTML = '<div style="text-align:center; padding: 2rem; color: var(--text-secondary);">No messages yet. Start the conversation!</div>';
+                    } else {
+                        messages.forEach(msg => renderMessage(msg));
+                        scrollToBottom();
+                    }
+                }
+            } catch (e) {
+                messagesArea.innerHTML = '<div style="color: red; text-align: center;">Error loading messages</div>';
+            }
+        }
+
+        function renderMessage(msg) {
+            const area = document.getElementById('messagesArea');
+            const isMe = msg.is_me;
+
+            const div = document.createElement('div');
+            div.className = `message-bubble ${isMe ? 'sent' : 'received'}`;
+            div.innerHTML = `
+                ${msg.content}
+                <span class="message-time">${msg.timestamp}</span>
+            `;
+            area.appendChild(div);
+        }
+
+        async function sendMessage() {
+            if (!currentPartnerId) return;
+            const input = document.getElementById('messageInput');
+            const content = input.value.trim();
+            if (!content) return;
+
+            // Optimistic Render
+            renderMessage({
+                content: content,
+                timestamp: new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }),
+                is_me: true
+            });
+            input.value = '';
+            scrollToBottom();
+
+            const token = localStorage.getItem('auth_token');
+            try {
+                await fetch('http://127.0.0.1:5000/api/messages', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`
+                    },
+                    body: JSON.stringify({
+                        recipient_id: currentPartnerId,
+                        content: content
+                    })
+                });
+            } catch (e) {
+                alert("Failed to send message");
+            }
+        }
+
+        function scrollToBottom() {
+            const area = document.getElementById('messagesArea');
+            area.scrollTop = area.scrollHeight;
+        }
+    </script>
+</body>
+
+</html>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap" rel="stylesheet">
+<!-- CSS -->
+<link rel="stylesheet" href="css/variables.css">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/global.css">
+<link rel="stylesheet" href="css/components.css">
+<link rel="stylesheet" href="css/pages.css">
+<link rel="stylesheet" href="css/header-style.css">
+<!-- Lucide Icons -->
+<script src="https://unpkg.com/lucide@latest"></script>
+<script src="js/include-components.js"></script>
+<style>
+    .page-header {
+        margin-bottom: 2rem;
+    }
+
+    .filter-bar {
+        display: flex;
+        gap: 1rem;
+        margin-bottom: 2rem;
+        flex-wrap: wrap;
+    }
+
+    .search-input {
+        flex: 1;
+        padding: 0.75rem 1rem;
+        border-radius: var(--radius-md);
+        border: 1px solid var(--border-color);
+        background: var(--card-bg);
+        color: var(--text-primary);
+    }
+
+    .search-input:focus {
+        outline: none;
+        border-color: var(--primary-color);
+    }
+</style>
 </head>
 
 <body>
